--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,7 @@ button {
   /* font-size: 20px;
   font-weight: 500; */
   font-size: 36px;
- font-weight: 700;
+  font-weight: 700;
   line-height: 1.2;
   letter-spacing: 0.02em;
   margin-bottom: 8px;
@@ -302,7 +302,7 @@ button {
   background-color: #f4f4fd;
   /* padding-bottom: 120px;
   padding-top: 120px; */
-  padding-bottom: 96px; 
+  padding-bottom: 96px;
   padding-top: 96px;
 }
 
@@ -320,7 +320,7 @@ button {
   display: flex;
   flex-wrap: wrap;
   gap: 72px;
-justify-content: center;;
+  justify-content: center;
   /* gap: 24px;
   flex-basis: calc((100% - 72px) / 4); */
 }
@@ -481,19 +481,23 @@ justify-content: center;;
   font-size: var(--text-font-size);
   line-height: 1.5;
   letter-spacing: 0.02em;
-  max-width: 264px;
+  max-width: 268px;
+  margin: 0 auto;
+  margin-bottom: 72px;
+  /* max-width: 264px; */
 }
 
 .bottom-container-social {
-  margin-right: 80px;
+  /* margin-right: 80px; */
 }
 
 .bottom-container {
-  display: flex;
-  align-items: baseline;
+  /* display: flex;
+  align-items: baseline; */
 }
 .bottom-container-item {
-  margin-right: 120px;
+  /* margin-right: 120px; */
+  text-align: center;
 }
 
 .bottom-social-media {
@@ -503,11 +507,14 @@ justify-content: center;;
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .bottom-social {
   display: flex;
+  justify-content: center;
   gap: 16px;
+  margin-bottom: 72px;
 }
 
 .bottom-social-link {
@@ -532,13 +539,15 @@ justify-content: center;;
 }
 
 .bottom-email {
-  margin-left: auto;
+  /* margin-left: auto; */
 }
 
 .bottom-form-email {
-  display: flex;
-  gap: 24px;
+  /* display: flex;
+  gap: 24px; */
+  text-align: center;
 }
+
 .bottom-email-text {
   color: var(--primary-white-color);
   font-size: 16px;
@@ -546,20 +555,23 @@ justify-content: center;;
   line-height: 1.5;
   letter-spacing: 0.02em;
   margin-bottom: 16px;
+  text-align: center;
 }
 
 .footer-input {
-  width: 264px;
+  /* width: 264px; */
+  width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid #fff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-  padding-left: 16px;
+  padding: 8px 8px 8px 16px;
   background-color: transparent;
   color: var(--primary-white-color);
   font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+  margin-bottom: 16px;
 }
 
 .footer-input::placeholder {
@@ -597,6 +609,11 @@ justify-content: center;;
 .footer-btn-icon {
   fill: currentColor;
   margin-left: 16px;
+}
+
+.footer-btn {
+  display: flex;
+  justify-content: center;
 }
 
 /** portfolio-navigation-btn */
@@ -957,5 +974,3 @@ justify-content: center;;
   border: none;
   fill: #f4f4fd;
 }
-
-
