--- a/css/media.css
+++ b/css/media.css
@@ -1,83 +1,185 @@
 @media screen and (min-width: 428px) {
-  .container {max-width: 426px;}
+  .container {
+    max-width: 426px;
+  }
 }
-
 
 @media screen and (min-width: 768px) {
-  .container {max-width: 766px;}
+  .container {
+    max-width: 766px;
+  }
 
-  .advantages-list {gap: 72px 24px;}
+  .advantages-list {
+    gap: 72px 24px;
+  }
 
-  .advantages-item {width: calc((100% - 24px) / 2);}
+  .advantages-item {
+    width: calc((100% - 24px) / 2);
+  }
 
-  .advantages-subtitle {justify-content: start;}
+  .advantages-subtitle {
+    justify-content: start;
+  }
+
+  .custom-list {
+    gap: 72px 24px;
+    justify-content: center;
+  }
+
+  .custom-item {
+    max-width: 168px;
+  }
+
+  .team-list {
+    gap: 64px 24px;
+    flex-basis: calc((100% - 24px) / 2);
+  }
+
+  .bottom-container {
+    justify-content: start;
+  }
+
+  .bottom-text {
+    max-width: 264px;
+  }
+
+  .bottom-form-email {
+    display: flex;
+    gap: 24px;
+  }
+
+  .footer-input {
+    width: 264px;
+  }
+
+  .bottom-tablet {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .bottom-container-item {
+    margin-right: 24px;
+    text-align: start;
+  }
+
+  .bottom-social-media {
+    text-align: start;
+  }
+
+  .bottom-email-text {
+    text-align: start;
+  }
 }
-
-.custom-list {gap: 72px 24px; justify-content: center;}
-
-.custom-item {max-width: 168px;}
-
-.team-list {gap: 64px 24px;
-flex-basis: calc((100% - 24px) / 2)}
 
 @media screen and (min-width: 1158px) {
-  .container {max-width: 1158px;}
+  .container {
+    max-width: 1158px;
+  }
 
-  .advantages-list {gap: 24px;}
+  .advantages-list {
+    gap: 24px;
+  }
 
   .advantages {
-  padding-top: 120px;
-  padding-bottom: 120px;}
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
 
-  .advantages-subtitle {font-size: 20px;
-  font-weight: 500;}
+  .advantages-subtitle {
+    font-size: 20px;
+    font-weight: 500;
+  }
 
-  .advantages-item {width: calc((100% - 24px*3) / 4);}
+  .advantages-item {
+    width: calc((100% - 24px * 3) / 4);
+  }
 
-  .advantages-item-text {max-width: 264px;}
+  .advantages-item-text {
+    max-width: 264px;
+  }
 
   .advantages-block {
-  width: 264px;
-  height: 112px;
-  background-color: #f4f4fd;
-  border-radius: 4px;
-  margin-bottom: 8px;
-  display: flex;
-  align-items: center;
-  justify-content: center;}
+    width: 264px;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 
+  .portfolio {
+    padding-bottom: 120px;
+    display: block;
+  }
+  .portfolio-title {
+    text-align: center;
+    color: #2e2f42;
+    font-size: var(--header-font-size);
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 72px;
+    display: block;
+  }
 
-.portfolio {
-  padding-bottom: 120px;
-  display: block;
+  .portfolio-list {
+    display: flex;
+    gap: 24px;
+    flex-basis: calc((100% - 48px) / 3);
+  }
+
+  .custom {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+
+  .custom-list {
+    gap: 24px;
+  }
+
+  .team {
+    padding-bottom: 120px;
+    padding-top: 120px;
+  }
+
+  .team-list {
+    gap: 24px;
+    flex-basis: calc((100% - 72px) / 4);
+  }
+
+  .bottom {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  .bottom-container {
+    display: flex;
+    align-items: baseline;
+    margin-left: 0;
+  }
+
+  .bottom-container-social {
+    margin-right: 80px;
+  }
+
+  .bottom-container-item {
+    margin-bottom: 0;
+    margin-right: 120px;
+  }
+
+  .bottom-social {
+    margin-bottom: 0;
+  }
+
+  .bottom-email {
+    margin-left: auto;
+  }
+
+  .bottom-form-email {
+    display: flex;
+    gap: 24px;
+  }
 }
-.portfolio-title {
-  text-align: center;
-  color: #2e2f42;
-  font-size: var(--header-font-size);
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  margin-bottom: 72px;
-  display: block;
-}
-
-.portfolio-list {
-  display: flex;
-  gap: 24px;
-  flex-basis: calc((100% - 48px) / 3);
-}
-
-.custom {padding-top: 120px;
-  padding-bottom: 120px; }
-}
-
-.custom-list {gap: 24px;}
-
-.team {
-  padding-bottom: 120px;
-  padding-top: 120px;}
-
-.team-list {gap: 24px;
-flex-basis: calc((100% - 72px) / 4)}
