--- a/css/media.css
+++ b/css/media.css
@@ -35,38 +35,34 @@
     flex-basis: calc((100% - 24px) / 2);
   }
 
-  .bottom-container {
-    justify-content: start;
-  }
-
   .bottom-text {
     max-width: 264px;
   }
 
+  .bottom-container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 72px 24px;
+  }
+
+  .bottom-container-item {
+    text-align: start;
+  }
+
   .bottom-form-email {
-    display: flex;
-    gap: 24px;
+    flex-direction: row;
   }
 
   .footer-input {
     width: 264px;
   }
 
-  .bottom-tablet {
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .bottom-container-item {
-    margin-right: 24px;
-    text-align: start;
+  .bottom-email-text {
+    text-align: left;
   }
 
   .bottom-social-media {
-    text-align: start;
-  }
-
-  .bottom-email-text {
     text-align: start;
   }
 }
@@ -155,31 +151,21 @@
     padding-bottom: 100px;
   }
 
-  .bottom-container {
-    display: flex;
-    align-items: baseline;
-    margin-left: 0;
-  }
-
   .bottom-container-social {
     margin-right: 80px;
   }
 
+  .bottom-container {
+    flex-wrap: nowrap;
+    align-items: baseline;
+    gap: 0;
+  }
+
   .bottom-container-item {
-    margin-bottom: 0;
     margin-right: 120px;
   }
 
-  .bottom-social {
-    margin-bottom: 0;
-  }
-
-  .bottom-email {
-    margin-left: auto;
-  }
-
   .bottom-form-email {
-    display: flex;
     gap: 24px;
   }
 }
