--- a/css/styles.css
+++ b/css/styles.css
@@ -412,7 +412,7 @@ button {
 .custom-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 72px 16px;
+  gap: 88px 16px;
   /* gap: 24px;
   justify-content: center; */
 }
@@ -491,13 +491,14 @@ button {
 }
 
 .bottom-container {
-  /* display: flex;
-  align-items: baseline; */
+  display: flex;
+  flex-direction: column;
+  gap: 72px;
+  /* align-items: baseline; */
 }
 .bottom-container-item {
   /* margin-right: 120px; */
   text-align: center;
-  margin-bottom: 72px;
 }
 
 .bottom-social-media {
@@ -514,7 +515,6 @@ button {
   display: flex;
   justify-content: center;
   gap: 16px;
-  margin-bottom: 72px;
 }
 
 .bottom-social-link {
@@ -543,9 +543,10 @@ button {
 }
 
 .bottom-form-email {
-  /* display: flex;
-  gap: 24px; */
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  /* gap: 24px; */
 }
 
 .bottom-email-text {
@@ -571,7 +572,6 @@ button {
   font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
-  margin-bottom: 16px;
 }
 
 .footer-input::placeholder {
