--- a/css/styles.css
+++ b/css/styles.css
@@ -175,13 +175,14 @@ button {
 
 .quote {
   max-width: 1440px;
-  padding: 188px 0;
+  /* padding: 188px 0; */
+  padding: 112px 0;
   background-color: #2e2f42;
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(../images/people-office.jpg);
+    url(../images/people-office-mob.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -189,16 +190,32 @@ button {
   margin: auto;
 }
 
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .quote {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url(../images/people-office-mob-2x.jpg);
+  }
+}
+
 .quote-title {
   color: var(--primary-white-color);
   text-align: center;
-  font-size: 56px;
+  /* font-size: 56px; */
+  font-size: 36px;
   font-weight: 700;
-  line-height: 1.07;
+  line-height: 1.11;
+  /* line-height: 1.07; */
   letter-spacing: 0.02em;
-  max-width: 496px;
+  max-width: 320px;
+  /* max-width: 496px; */
   margin: 0 auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
+  /* margin-bottom: 48px; */
   align-items: center;
 }
 .quote-button {
