--- a/css/styles.css
+++ b/css/styles.css
@@ -102,28 +102,6 @@ button {
   color: var(--primary-black-color);
 }
 
-.content {
-  display: flex;
-  gap: 40px;
-}
-
-.content-list {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  color: #404bbf;
-}
-
-.content-item-log .current::after {
-  content: "";
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background: #404bbf;
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-}
 .header-navigation {
   display: flex;
   align-items: center;
@@ -131,45 +109,9 @@ button {
   /*flex-grow: 1;*/
 }
 
+.content,
 .contacts-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-.content-list {
-  color: var(--primary-black-color);
-  font-size: var(--text-font-size);
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.content-list:hover,
-.content-list:focus {
-  text-decoration: underline;
-  color: #404bbf;
-}
-.content-list:active {
-  color: #404bbf;
-}
-
-.current {
-  color: #404bbf;
-}
-
-.contacts-list-item {
-  color: var(--secondary-text-color);
-  font-size: var(--text-font-size);
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  padding: 24px 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.contacts-list-item:hover,
-.contacts-list-item:focus {
-  color: #404bbf;
+  display: none;
 }
 /** main-section-title */
 
