--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,10 @@ button {
   text-decoration: none;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 /** header */
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -94,7 +98,8 @@ button {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  margin-right: 76px;
+  margin-right: 120px;
+  /* margin-right: 76px; */
   padding: 24px 0;
 }
 
@@ -113,6 +118,161 @@ button {
 .contacts-list {
   display: none;
 }
+
+.menu-open-btn {
+  border: none;
+  background: #fff;
+}
+
+.menu-open-btn:hover,
+.menu-open-btn:focus {
+  border-bottom: 1px solid #e7e9fc;
+  background: #fff;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
+}
+
+.mob-menu {
+  background-color: var(--primary-white-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  padding: 80px 35px 40px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: scale(1);
+}
+
+.mob-menu.is-hidden {
+  transform: scale(5);
+}
+
+.mob-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  cursor: pointer;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  top: 24px;
+  padding: 0;
+  right: 24px;
+  fill: currentColor;
+  color: #2e2f42;
+  background-color: #e7e9fc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-close-btn:hover {
+  background-color: #404bbf;
+  border: none;
+}
+
+.mob-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.mob-close-btn:active {
+  background-color: #404bbf;
+}
+
+.mob-content-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+.mob-content-list {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.03em;
+  text-transform: capitalize;
+  color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-content-list:hover,
+.mob-content-list:focus {
+  text-decoration: underline;
+  color: #404bbf;
+}
+.mob-content-list:active {
+  color: #404bbf;
+}
+
+.mob-contacts {
+}
+.mob-contacts-list {
+  margin-bottom: 40px;
+}
+.mob-contacts-tel {
+  min-width: 320px;
+  color: #4d5ae5;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 1.11;
+  letter-spacing: 0.03em;
+  text-transform: capitalize;
+}
+
+@media screen and (max-width: 427px) {
+  .mob-contacts-tel {
+    font-size: 20px;
+  }
+}
+
+.mob-contacts-email {
+  color: #434455;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.mob-social {
+  display: flex;
+  gap: 56px;
+}
+.mob-social-item {
+}
+.mob-social-link {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--secondary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-contacts-listen {
+  margin-bottom: 48px;
+}
+
+.mob-social-link:focus {
+  background-color: #404bbf;
+}
+
+.mob-social-link:hover {
+  background-color: #404bbf;
+}
+.mob-social-icon {
+  fill: var(--primary-white-color);
+}
+
 /** main-section-title */
 
 .quote {
