--- a/css/media.css
+++ b/css/media.css
@@ -3,9 +3,18 @@
     max-width: 426px;
   }
 }
-@media screen and (max-width: 428px) {
+@media screen and (max-width: 427px) {
   .mob-contacts-tel {
     font-size: 20px;
+  }
+  .mob-social {
+    gap: 28px;
+  }
+}
+
+@media screen and (max-width: 410px) {
+  .modal {
+    width: 310px;
   }
 }
 
@@ -17,6 +26,10 @@
   .content {
     display: flex;
     gap: 40px;
+  }
+
+  .logo {
+    margin-right: 120px;
   }
 
   .menu-open-btn {
@@ -76,7 +89,7 @@
     font-size: var(--text-font-size);
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 24px 0;
+    /* padding: 24px 0; */
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .contacts-list-item:hover,
@@ -207,6 +220,10 @@
     margin-right: 76px;
   }
 
+  .contacts-list-item {
+    padding: 24px 0;
+  }
+
   .contacts-list {
     flex-direction: row;
     align-items: center;
@@ -233,6 +250,7 @@
 
   .advantages-item-text {
     max-width: 264px;
+    font-weight: 400;
   }
 
   .advantages-block {
